@@ -1,6 +1,6 @@
 package cl.duoc.medical_records.extras;
 
-import java.util.stream.Collectors;
+import java.util.List;
 
 import org.springframework.stereotype.Component;
 
@@ -18,149 +18,156 @@ import cl.duoc.medical_records.model.Diagnoses;
 import cl.duoc.medical_records.model.MedicalRecord;
 import cl.duoc.medical_records.model.MedicalVisit;
 import cl.duoc.medical_records.model.VitalSigns;
-import cl.duoc.medical_records.repository.MedicalRecordRepository;
-import cl.duoc.medical_records.repository.MedicalVisitRepository;
-import lombok.RequiredArgsConstructor;
 
 @Component
-@RequiredArgsConstructor
-public class ToDTO 
-{
-    private final MedicalRecordRepository medicalRecordRepository;
-    private final MedicalVisitRepository medicalVisitRepository;
+public class ToDTO {
 
-    public MedicalRecord toMedicalRecord(CreateMedicalRecordRequestDTO requestDTO)
-    {
+    public MedicalRecord toMedicalRecord(
+            CreateMedicalRecordRequestDTO requestDTO) {
+
         MedicalRecord medicalRecord = new MedicalRecord();
         medicalRecord.setPatientId(requestDTO.patientId());
+        medicalRecord.setActive(true);
+
         return medicalRecord;
     }
 
-    public MedicalRecordResponseDTO toMedicalRecordResponseDTO(MedicalRecord medicalRecord)
-    {
-        return new MedicalRecordResponseDTO
-        (
-            medicalRecord.getId(),
-            medicalRecord.getPatientId(),
-            medicalRecord.getActive(),
-            medicalRecord.getCreatedAt()
-        );
+    public MedicalRecordResponseDTO toMedicalRecordResponseDTO(
+            MedicalRecord medicalRecord) {
+
+        return new MedicalRecordResponseDTO(
+                medicalRecord.getId(),
+                medicalRecord.getPatientId(),
+                medicalRecord.getActive(),
+                medicalRecord.getCreatedAt());
     }
 
-    public MedicalVisit toMedicalVisit(CreateMedicalVisitRequestDTO requestDTO)
-    {
+    public MedicalVisit toMedicalVisit(
+            CreateMedicalVisitRequestDTO requestDTO) {
+
         MedicalVisit medicalVisit = new MedicalVisit();
-        medicalVisit.setMedicalRecord(medicalRecordRepository
-            .findById(requestDTO.medicalRecordId())
-            .orElseThrow(() -> new RuntimeException("No se ha encontrado un registro médico asociado a ese ID.")));
+
         medicalVisit.setAppointmentId(requestDTO.appointmentId());
         medicalVisit.setDoctorId(requestDTO.doctorId());
         medicalVisit.setVisitDate(requestDTO.visitDate());
         medicalVisit.setVisitReason(requestDTO.visitReason());
         medicalVisit.setObservations(requestDTO.observations());
         medicalVisit.setTreatment(requestDTO.treatment());
+
         return medicalVisit;
     }
 
-    public MedicalVisitResponseDTO toMedicalVisitResponseDTO(MedicalVisit medicalVisit)
-    {  
-        return new MedicalVisitResponseDTO
-        (
-            medicalVisit.getId(),
-            medicalVisit.getMedicalRecord().getId(),
-            medicalVisit.getAppointmentId(),
-            medicalVisit.getDoctorId(),
-            medicalVisit.getVisitDate(),
-            medicalVisit.getVisitReason(),
-            medicalVisit.getObservations(),
-            medicalVisit.getTreatment(),
-            medicalVisit.getCreatedAt()
-        );
+    public MedicalVisitResponseDTO toMedicalVisitResponseDTO(
+            MedicalVisit medicalVisit) {
+
+        return new MedicalVisitResponseDTO(
+                medicalVisit.getId(),
+                medicalVisit.getMedicalRecord().getId(),
+                medicalVisit.getAppointmentId(),
+                medicalVisit.getDoctorId(),
+                medicalVisit.getVisitDate(),
+                medicalVisit.getVisitReason(),
+                medicalVisit.getObservations(),
+                medicalVisit.getTreatment(),
+                medicalVisit.getCreatedAt());
     }
 
-    public Diagnoses toDiagnoses(CreateDiagnosisRequestDTO requestDTO)
-    {
-        Diagnoses diagnoses = new Diagnoses();
-        diagnoses.setMedicalVisit(medicalVisitRepository
-            .findById(requestDTO.medicalVisitId())
-            .orElseThrow(() -> new RuntimeException("No se ha encontrado una visita médica asociada a ese ID.")));
-        diagnoses.setDiagnosisDescription(requestDTO.diagnosisDescription());
-        diagnoses.setDiagnosisNotes(requestDTO.diagnosisNotes());
-        return diagnoses;
+    public Diagnoses toDiagnoses(
+            CreateDiagnosisRequestDTO requestDTO) {
+
+        Diagnoses diagnosis = new Diagnoses();
+
+        diagnosis.setDiagnosisDescription(
+                requestDTO.diagnosisDescription());
+        diagnosis.setDiagnosisNotes(
+                requestDTO.diagnosisNotes());
+
+        return diagnosis;
     }
 
-   public DiagnosisResponseDTO toDiagnosisResponseDTO (Diagnoses diagnoses)
-    {
-        return new DiagnosisResponseDTO
-        (
-            diagnoses.getId(),
-            diagnoses.getMedicalVisit().getId(),
-            diagnoses.getDiagnosisDescription(),
-            diagnoses.getDiagnosisNotes()
-        );
+    public DiagnosisResponseDTO toDiagnosisResponseDTO(
+            Diagnoses diagnosis) {
+
+        return new DiagnosisResponseDTO(
+                diagnosis.getId(),
+                diagnosis.getMedicalVisit().getId(),
+                diagnosis.getDiagnosisDescription(),
+                diagnosis.getDiagnosisNotes());
     }
 
-    public VitalSigns toVitalSigns(CreateVitalSignRequestDTO requestDTO)
-    {
+    public VitalSigns toVitalSigns(
+            CreateVitalSignRequestDTO requestDTO) {
+
         VitalSigns vitalSigns = new VitalSigns();
-        vitalSigns.setMedicalVisit(medicalVisitRepository
-            .findById(requestDTO.medicalVisitId())
-            .orElseThrow(() -> new RuntimeException("No se ha encontrado una visita médica asociada a ese ID")));
+
         vitalSigns.setTemperature(requestDTO.temperature());
         vitalSigns.setBloodPressure(requestDTO.bloodPressure());
         vitalSigns.setHeartRate(requestDTO.heartRate());
         vitalSigns.setWeight(requestDTO.weight());
         vitalSigns.setHeight(requestDTO.height());
+
         return vitalSigns;
     }
 
-    public VitalSignResponseDTO toVitalSignResponseDTO(VitalSigns vitalSigns)
-    {
-        return new VitalSignResponseDTO
-        (
-            vitalSigns.getId(),
-            vitalSigns.getMedicalVisit().getId(),
-            vitalSigns.getTemperature(),
-            vitalSigns.getBloodPressure(),
-            vitalSigns.getHeartRate(),
-            vitalSigns.getWeight(),
-            vitalSigns.getHeight(),
-            vitalSigns.getCreatedAt()
-        );
+    public VitalSignResponseDTO toVitalSignResponseDTO(
+            VitalSigns vitalSigns) {
+
+        return new VitalSignResponseDTO(
+                vitalSigns.getId(),
+                vitalSigns.getMedicalVisit().getId(),
+                vitalSigns.getTemperature(),
+                vitalSigns.getBloodPressure(),
+                vitalSigns.getHeartRate(),
+                vitalSigns.getWeight(),
+                vitalSigns.getHeight(),
+                vitalSigns.getCreatedAt());
     }
 
-    public MedicalVisitDetailReponseDTO toMedicalVisitDetailReponseDTO(MedicalVisit medicalVisit)
-    {
-        return new MedicalVisitDetailReponseDTO
-        (
-            medicalVisit.getId(),
-            medicalVisit.getAppointmentId(),
-            medicalVisit.getDoctorId(),
-            medicalVisit.getVisitDate(),
-            medicalVisit.getVisitReason(),
-            medicalVisit.getObservations(),
-            medicalVisit.getTreatment(),
-            medicalVisit.getCreatedAt(),
-            medicalVisit.getDiagnoses().stream()
-                .map(this::toDiagnosisResponseDTO)
-                .collect(Collectors.toList()),
-            medicalVisit.getVitalSigns().stream()
-                .map(this::toVitalSignResponseDTO)
-                .collect(Collectors.toList())
-        );
+    public MedicalVisitDetailReponseDTO toMedicalVisitDetailReponseDTO(
+            MedicalVisit medicalVisit) {
+
+        List<DiagnosisResponseDTO> diagnoses = medicalVisit.getDiagnoses() == null
+                ? List.of()
+                : medicalVisit.getDiagnoses()
+                        .stream()
+                        .map(this::toDiagnosisResponseDTO)
+                        .toList();
+
+        List<VitalSignResponseDTO> vitalSigns = medicalVisit.getVitalSigns() == null
+                ? List.of()
+                : medicalVisit.getVitalSigns()
+                        .stream()
+                        .map(this::toVitalSignResponseDTO)
+                        .toList();
+
+        return new MedicalVisitDetailReponseDTO(
+                medicalVisit.getId(),
+                medicalVisit.getAppointmentId(),
+                medicalVisit.getDoctorId(),
+                medicalVisit.getVisitDate(),
+                medicalVisit.getVisitReason(),
+                medicalVisit.getObservations(),
+                medicalVisit.getTreatment(),
+                medicalVisit.getCreatedAt(),
+                diagnoses,
+                vitalSigns);
     }
 
-    public MedicalRecordDetailResponseDTO toMedicalRecordDetailResponseDTO(MedicalRecord medicalRecord)
-    {
-        return new MedicalRecordDetailResponseDTO
-        (
-            medicalRecord.getId(),
-            medicalRecord.getPatientId(),
-            medicalRecord.getActive(),
-            medicalRecord.getCreatedAt(),
-            medicalRecord.getMedicalVisits().stream()
-                .map(this::toMedicalVisitDetailReponseDTO)
-                .collect(Collectors.toList())
-        );
+    public MedicalRecordDetailResponseDTO toMedicalRecordDetailResponseDTO(
+            MedicalRecord medicalRecord) {
+
+        List<MedicalVisitDetailReponseDTO> visits = medicalRecord.getMedicalVisits() == null
+                ? List.of()
+                : medicalRecord.getMedicalVisits()
+                        .stream()
+                        .map(this::toMedicalVisitDetailReponseDTO)
+                        .toList();
+
+        return new MedicalRecordDetailResponseDTO(
+                medicalRecord.getId(),
+                medicalRecord.getPatientId(),
+                Boolean.TRUE.equals(medicalRecord.getActive()),
+                medicalRecord.getCreatedAt(),
+                visits);
     }
 }
